# FlipMeOver

./: .gitignore  README.md  flip_me_over.py  install.sh  mouse_monitor.py  pyproject.toml  uninstall.sh
tests/: test_mouse.py
