[project]
name = "flipmeover"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "pyobjc-framework-Cocoa>=12.1; sys_platform == 'darwin'",
    "pyobjc-framework-iobluetooth>=12.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
