[project]
name = "flipmeover"
version = "0.1.0"
description = "FlipMeOver is a lightweight macOS background utility that monitors your Magic Mouse battery level and sends native desktop notifications before your mouse becomes a paperweight!"
requires-python = ">=3.11"
dependencies = [
    "pyobjc-framework-Cocoa>=12.1; sys_platform == 'darwin'",
    "pyobjc-framework-iobluetooth>=12.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
